--- a/app/src/main/res/layout/cadastro.xml
+++ b/app/src/main/res/layout/cadastro.xml
@@ -9,24 +9,23 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="62dp"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textColor="@color/black"
         android:text="Controle Mental" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/textView2"
+    <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
-        android:text="Esse aplicativo foi desenvolvido para você que quer aprimorar suas capacidades Cognitivas" />
+        android:layout_height="204dp"
+        android:src="@drawable/brain" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cadastro" />
+        android:text="Embarcar na Jornada Mental" />
+
 </LinearLayout>
