--- a/app/src/main/res/layout/desenvolvimento.xml
+++ b/app/src/main/res/layout/desenvolvimento.xml
@@ -7,8 +7,11 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
-        android:layout_height="63dp"
-        android:text="Atleta Mental" />
+        android:layout_height="wrap_content"
+        android:text="Se tornando Autor Da sua Historia"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/button3"
